--- a/Parte2/Content.css
+++ b/Parte2/Content.css
@@ -29,7 +29,7 @@ h1 {
 
 
 div {
-    flex: 1 1 calc(33.333% - 10px); /* Tres imágenes por fila con espacio incluido */
+    flex: 1 1 calc(25% - 10px); /* Tres imágenes por fila con espacio incluido */
     box-sizing: border-box;
     border: 2px solid #ff0099;
     border-radius: 10px;
@@ -43,8 +43,13 @@ div a img {
     display: block;
 }
 
+@media (max-width: 1724px) {
+    div {
+        flex: 1 1 calc(33.3333% - 10px); /* Tres imágenes por fila con espacio incluido */
+    }
+}
 
-@media (max-width: 1024px) {
+@media (max-width: 1124px) {
     div {
         flex: 1 1 calc(50% - 10px); /* Dos imágenes por fila con espacio incluido */
     }
