--- a/Parte2/Content.css
+++ b/Parte2/Content.css
@@ -60,3 +60,26 @@ div a img {
         flex: 1 1 100%; /* Una imagen por fila */
     }
 }
+
+/* Contenedor para imagen a pantalla completa */
+.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.fullscreen img {
+    max-width: 100%;
+    max-height: 100%;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+}
